# large-lattice-model

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: rtd_requirements.txt
docs/source/: conf.py  index.md
src/large_lattice_model/: __init__.py  fit.py  latticemodel.py  mathieu.py  settings.py  sidebands.py  xyz.py
tests/: plot_mathieu.py  plot_omega.py  plot_sidebands.py  plot_xyz.py  test_mathieu.py
