[tool.poetry]
name = "large-lattice-model"
version = "0.1.0"
description = ""
authors = ["Marco Pizzocaro <m.pizzocaro@inrim.it>"]
readme = "README.md"
packages = [{include = "large_lattice_model", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
scipy = "^1.14.0"
#https://stackoverflow.com/questions/77316505/im-having-a-bad-time-installing-some-modules-with-poetry
#pygsl = "^2.3.3" # poetry can't install this, so I used pip instead
numba = "^0.60.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
ipython = "^8.26.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
hypothesis = "^6.112.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120