[tool.poetry]
name = "large-lattice-model"
version = "0.1.0"
description = ""
authors = ["Marco Pizzocaro <m.pizzocaro@inrim.it>"]
readme = "README.md"
packages = [{include = "large_lattice_model", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
scipy = "^1.14.0"
numba = "^0.60.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
ipython = "^8.26.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
hypothesis = "^6.112.0"



[tool.poetry.group.doc.dependencies]
sphinx = "^7.4.7"
myst-parser = "^3.0.1"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.9.3"
sphinx-autoapi = "^3.3.1"
starlette = "^0.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120